[package]
name = "aximate"
version = "0.1.0"
authors = ["insprac"]
edition = "2021"
description = "Aximate core data structures and utilities"
repository = "https://github.com/aximate/aximate-rs"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"